include_directories(${CMAKE_SOURCE_DIR}/controllers)

add_subdirectory(footbot_diffusion)
add_subdirectory(footbot_swarm)
add_subdirectory(footbot_flocking)
add_subdirectory(footbot_gripping)
add_subdirectory(footbot_foraging)
add_subdirectory(footbot_nn)
add_subdirectory(footbot_manualcontrol)

